--- a/index.html
+++ b/index.html
@@ -149,55 +149,55 @@
           <h1 class="text-warning">recomnded countries</h1>
           <div class="row row-cols-1 row-cols-md-3 g-0">
             <div class="card bg-danger text-white">
-              <img src="/images/japan.jpg" class="card-img-top" alt="...">
+              <img src="images/japan.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Japan</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="/images/austria.jpg" class="card-img-top" alt="...">
+              <img src="images/austria.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Austria</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="/images/india.jpg" class="card-img-top" alt="...">
+              <img src="images/india.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">India</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="/images/turkey-istanbul.jpg" class="card-img-top" alt="...">
+              <img src="images/turkey-istanbul.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Turkey</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="/images/mexico.jpg" class="card-img-top" alt="...">
+              <img src="images/mexico.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Mexico</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="/images/Thailand-Krabi.jpg" class="card-img-top" alt="...">
+              <img src="images/Thailand-Krabi.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Thailand</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="/images/germany.jpg" class="card-img-top" alt="...">
+              <img src="images/germany.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Germany</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="/images/united-kingdom.jpg" class="card-img-top" alt="...">
+              <img src="images/united-kingdom.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">United kingdom</h5>
               </div>
             </div>
               <div class="card bg-danger text-white">
-                <img src="/images/switzerland.jpg" class="card-img-top" alt="...">
+                <img src="images/switzerland.jpg" class="card-img-top" alt="...">
                 <div class="card-img-overlay">
                   <h5 class="card-title text-center text-warning font-weight-bold">Switzerland</h5>
                 </div>
