--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet" />
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <!-- CSS Files -->
-    <link href="./assets/css/bootstrap.min.css" rel="stylesheet" />
-    <link href="./assets/css/paper-kit.css?v=2.2.0" rel="stylesheet" />
-    <link href="./assets/demo/demo.css" rel="stylesheet" />
+    <link href="./styles/bootstrap.min.css" rel="stylesheet" />
+    <link href="./styles/paper-kit.css" rel="stylesheet" />
     
   </head>
   <body class="index-page sidebar-collapse">  
@@ -27,7 +26,7 @@
   <!-- -------------------------------------------------------------------------------------------------------    Home Page    ---------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-    <div  id="Home">
+    <div  id="Home" class="">
       <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="1000">
       <div class="container">
         <div class="navbar-translate">
@@ -70,7 +69,7 @@
               <a href="#/login" onclick="showLogin()" id="login-btn" class="nav-link"><i class="nc-icon nc-single-02"></i> Login</a>
             </li>
             <li class="nav-item">
-              <a href="#/register.html" onclick="showRegister()" id="register-btn" class="btn btn-danger btn-round">Sign-Up</a>
+              <a href="" onclick="showRegister()" id="register-btn" class="btn btn-danger btn-round">Sign-Up</a>
             </li>
           </ul>
         </div>
@@ -102,7 +101,7 @@
           <div class="title">
             <h1 class="text-warning">Top countries in tourism in 2021!</h1>
           </div>
-          <div class="card mb-3">
+          <div class="card mb-3" onclick="france()">
             <img class="card-img-top" src="https://wallpaperaccess.com/full/42946.jpg" alt="Card image cap">
             <div class="card-body">
               <h2 class="card-title">1-France</h2>
@@ -110,7 +109,7 @@
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
-          <div class="card mb-3">
+          <div class="card mb-3" onclick="spain()">
             <img class="card-img-top" src="https://wallpaperaccess.com/full/2527006.jpg" alt="Card image cap">
             <div class="card-body">
               <h2 class="card-title">2-Spain</h2>
@@ -118,7 +117,7 @@
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
-          <div class="card mb-3">
+          <div class="card mb-3" onclick="unitedStates()">
             <img class="card-img-top" src="https://wallpapercave.com/wp/wp4472281.png" alt="Card image cap">
             <div class="card-body">
               <h2 class="card-title">3-United states</h2>
@@ -126,7 +125,7 @@
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
-          <div class="card mb-3">
+          <div class="card mb-3" onclick="china()">
             <img class="card-img-top" src="https://bonpic.com/wallpapers/original/4508.jpg" alt="Card image cap">
             <div class="card-body">
               <h2 class="card-title">4-China</h2>
@@ -134,7 +133,7 @@
               <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
             </div>
           </div>
-          <div class="card mb-3">
+          <div class="card mb-3" onclick="italy()">
             <img class="card-img-top" src="https://wallpaperaccess.com/full/5994288.jpg" alt="Card image cap">
             <div class="card-body">
               <h2 class="card-title">5-Italy</h2>
@@ -430,6 +429,85 @@
     </div>
   </div>
   </div>
+  <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+  <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+  <!-- -------------------------------------------------------------------------------------------------------    IDK Page    ----------------------------------------------------------------------------------------------------------- -->
+  <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+  <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
+  <div id="Landing" class="d-none">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="1000">
+      <div class="container">
+        <div class="navbar-translate">
+          <a class="navbar-brand" href="#" onclick="showHome()" rel="tooltip" title="Coded by Adnan" data-placement="bottom">
+            Travel
+          </a>
+          <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-bar bar1"></span>
+            <span class="navbar-toggler-bar bar2"></span>
+            <span class="navbar-toggler-bar bar3"></span>
+          </button>
+        </div>
+        <div class="collapse navbar-collapse justify-content-end" id="navigation">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/TuwaiqAcademy" target="_blank">
+                <i class="fa fa-twitter"></i>
+                <p class="d-lg-none">Twitter</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" rel="tooltip" title="Like us on Facebook" data-placement="bottom" href="https://www.facebook.com/TuwaiqAcademy" target="_blank">
+                <i class="fa fa-facebook-square"></i>
+                <p class="d-lg-none">Facebook</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" rel="tooltip" title="Follow us on Instagram" data-placement="bottom" href="https://www.instagram.com" target="_blank">
+                <i class="fa fa-instagram"></i>
+                <p class="d-lg-none">Instagram</p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" rel="tooltip" title="Star on GitHub" data-placement="bottom" href="https://github.com/Aaboassoud/FrontEnd-Project1" target="_blank">
+                <i class="fa fa-github"></i>
+                <p class="d-lg-none">GitHub</p>
+              </a>
+            </li>
+            <li class="nav-item" id="welcome">
+              <a href="#/login" onclick="showLogin()" id="login-btn" class="nav-link"><i class="nc-icon nc-single-02"></i> Login</a>
+            </li>
+            <li class="nav-item">
+              <a href="" onclick="showRegister()" id="register-btn" class="btn btn-danger btn-round">Sign-Up</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="section-dark">
+      <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="/images/japan.jpg" class="d-block w-100" alt="..." id="car1">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/mexico.jpg" class="d-block w-100" alt="..." id="car2">
+          </div>
+          <div class="carousel-item">
+            <img src="/images/indonesia.jpg" class="d-block w-100" alt="..." id="car3">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+  </div>  
+</div>
+
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
@@ -439,37 +517,17 @@
     <p class="text-center text-muted">© 2022 Travel, Inc</p>
   </footer>
 
-  <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-  <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-  <!-- -------------------------------------------------------------------------------------------------------    IDK Page    ----------------------------------------------------------------------------------------------------------- -->
-  <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-  <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script> -->
-
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    -->
     <!--   Core JS Files   -->
-    <script src="./assets/js/core/jquery.min.js" type="text/javascript"></script>
-    <script src="./assets/js/core/popper.min.js" type="text/javascript"></script>
-    <script src="./assets/js/core/bootstrap.min.js" type="text/javascript"></script>
-    <!--  Plugin for Switches, full documentation here: http://www.jque.re/plugins/version3/bootstrap.switch/ -->
-    <script src="./assets/js/plugins/bootstrap-switch.js"></script>
-    <!--  Plugin for the Sliders, full documentation here: http://refreshless.com/nouislider/ -->
-    <script src="./assets/js/plugins/nouislider.min.js" type="text/javascript"></script>
-    <!--  Plugin for the DatePicker, full documentation here: https://github.com/uxsolutions/bootstrap-datepicker -->
-    <script src="./assets/js/plugins/moment.min.js"></script>
-    <script src="./assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
-    <!-- Control Center for Paper Kit: parallax effects, scripts for the example pages etc -->
-    <script src="./assets/js/paper-kit.js?v=2.2.0" type="text/javascript"></script>
-    <!--  Google Maps Plugin    -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="./JavaScripts/popper.min.js" type="text/javascript"></script>
+    <script src="./JavaScripts/bootstrap.min.js" type="text/javascript"></script>
+    <script src="./JavaScripts/bootstrap-switch.js"></script>
+    <script src="./JavaScripts/jquery.min.js"></script>
+    <script src="./JavaScripts/nouislider.min.js"></script>
+    <!-- Control Center  -->
+    <script src="./JavaScripts/paper-kit.js" type="text/javascript"></script>
     <script src="./JavaScripts/main.js" type="text/javascript"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY_HERE"></script>
     <script>
       $(document).ready(function() {
 
