--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <a href="#/login" onclick="showLogin()" id="login-btn" class="nav-link"><i class="nc-icon nc-single-02"></i> Login</a>
             </li>
             <li class="nav-item">
-              <a href="" onclick="showRegister()" id="register-btn" class="btn btn-danger btn-round">Sign-Up</a>
+              <a href="#register" onclick="showRegister()" id="register-btn" class="btn btn-danger btn-round">Sign-Up</a>
             </li>
           </ul>
         </div>
@@ -148,55 +148,55 @@
           <h1 class="text-warning">recomnded countries</h1>
           <div class="row row-cols-1 row-cols-md-3 g-0">
             <div class="card bg-danger text-white">
-              <img src="images/japan.jpg" class="card-img-top" alt="...">
+              <img src="./images/japan.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Japan</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="images/austria.jpg" class="card-img-top" alt="...">
+              <img src="./images/austria.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Austria</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="images/india.jpg" class="card-img-top" alt="...">
+              <img src="./images/india.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">India</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="images/turkey-istanbul.jpg" class="card-img-top" alt="...">
+              <img src="./images/turkey-istanbul.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Turkey</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="images/mexico.jpg" class="card-img-top" alt="...">
+              <img src="./images/mexico.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Mexico</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="images/Thailand-Krabi.jpg" class="card-img-top" alt="...">
+              <img src="./images/Thailand-Krabi.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Thailand</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="images/germany.jpg" class="card-img-top" alt="...">
+              <img src="./images/germany.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">Germany</h5>
               </div>
             </div>
             <div class="card bg-danger text-white">
-              <img src="images/united-kingdom.jpg" class="card-img-top" alt="...">
+              <img src="./images/united-kingdom.jpg" class="card-img-top" alt="...">
               <div class="card-img-overlay">
                 <h5 class="card-title text-center text-warning font-weight-bold">United kingdom</h5>
               </div>
             </div>
               <div class="card bg-danger text-white">
-                <img src="images/switzerland.jpg" class="card-img-top" alt="...">
+                <img src="./images/switzerland.jpg" class="card-img-top" alt="...">
                 <div class="card-img-overlay">
                   <h5 class="card-title text-center text-warning font-weight-bold">Switzerland</h5>
                 </div>
@@ -271,7 +271,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navigation">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="register.html" class="btn btn-danger btn-round">Sign-Up</a>
+            <a href="#" onclick="showRegister()" class="btn btn-danger btn-round">Sign-Up</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/TuwaiqAcademy" target="_blank">
@@ -353,7 +353,7 @@
   <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="300">
     <div class="container">
       <div class="navbar-translate">
-        <a class="navbar-brand" href="index.html" rel="tooltip" title="Coded by Adnan" data-placement="bottom">
+        <a class="navbar-brand" href="#" onclick="showHome()" rel="tooltip" title="Coded by Adnan" data-placement="bottom">
           Travel
         </a>
         <button class="navbar-toggler navbar-toggler" type="button" data-toggle="collapse" data-target="#navigation" aria-controls="navigation-index" aria-expanded="false" aria-label="Toggle navigation">
@@ -365,7 +365,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navigation">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="login.html" class="btn btn-outline-danger btn-round"><i class="nc-icon nc-single-02"></i> Login</a>
+            <a href="#" onclick="showLogin()" class="btn btn-outline-danger btn-round"><i class="nc-icon nc-single-02"></i> Login</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" rel="tooltip" title="Follow us on Twitter" data-placement="bottom" href="https://twitter.com/TuwaiqAcademy" target="_blank">
@@ -421,7 +421,7 @@
               <button class="btn btn-danger btn-block btn-round">Register</button>
             </form>
             <div class="forgot">
-              <a href="login.html" class="btn btn-link btn-danger">I'm already a member</a>
+              <a href="#" onclick="showLogin()" class="btn btn-link btn-danger">I'm already a member</a>
             </div>
           </div>
         </div>
@@ -431,7 +431,7 @@
   </div>
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
-  <!-- -------------------------------------------------------------------------------------------------------    IDK Page    ----------------------------------------------------------------------------------------------------------- -->
+  <!-- -------------------------------------------------------------------------------------------------------    landing Page    ----------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <div id="Landing" class="d-none">
@@ -477,7 +477,7 @@
               <a href="#/login" onclick="showLogin()" id="login-btn" class="nav-link"><i class="nc-icon nc-single-02"></i> Login</a>
             </li>
             <li class="nav-item">
-              <a href="" onclick="showRegister()" id="register-btn" class="btn btn-danger btn-round">Sign-Up</a>
+              <a href="#" onclick="showRegister()" id="register-btn" class="btn btn-danger btn-round">Sign-Up</a>
             </li>
           </ul>
         </div>
@@ -487,13 +487,13 @@
       <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="/images/japan.jpg" class="d-block w-100" alt="..." id="car1">
+            <img src="./images/japan.jpg" class="d-block w-100" alt="..." id="car1">
           </div>
           <div class="carousel-item">
-            <img src="/images/mexico.jpg" class="d-block w-100" alt="..." id="car2">
+            <img src="./images/mexico.jpg" class="d-block w-100" alt="..." id="car2">
           </div>
           <div class="carousel-item">
-            <img src="/images/indonesia.jpg" class="d-block w-100" alt="..." id="car3">
+            <img src="./images/indonesia.jpg" class="d-block w-100" alt="..." id="car3">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -510,7 +510,7 @@
 
   <footer class="py-3 my-4">
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-      <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+      <li class="nav-item"><a href="#" onclick="showHome()" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
     </ul>
