--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
   <!-- ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- -->
     <div  id="Home" class="">
-      <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="1000">
+      <nav class="navbar navbar-expand-lg fixed-top navbar-transparent " color-on-scroll="300">
       <div class="container">
         <div class="navbar-translate">
           <a class="navbar-brand" href="#" onclick="showHome()" rel="tooltip" title="Coded by Adnan" data-placement="bottom">
@@ -104,48 +104,48 @@
       <div class="section section-gray">
         <div class="container">
           <div class="title">
-            <h1 class="text-warning text-bold">Top countries in tourism in 2021!</h1>
+            <h1 class="text-danger text-bold" id="header-1">Top countries in tourism in 2021!</h1>
           </div>
           <div class="card mb-3" onclick="france()">
             <img class="card-img-top" src="https://wallpaperaccess.com/full/42946.jpg" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">1-France</h2>
-              <p class="card-text">The most popular tourist destination in the world for more than 30 years, France offers a myriad of attractions: the Eiffel tower, countless world-class restaurants, the Musée du Louvre, the Palace of Versailles, the Notre-Dame cathedral, the beaches of the Côte d'Azur, and of course, Disneyland Paris. Moreover, the lushly beautiful countryside is full of storybook villages, mountains, vineyards, and the occasional castle. One can even view prehistoric cave paintings in Lascaux. Paris, France's capital, is the most visited city in Europe, receiving 38 million tourists in 2019.</p>
+              <h2 class="card-title text-bold">1-France</h2>
+              <p class="card-text text-bold">The most popular tourist destination in the world for more than 30 years, France offers a myriad of attractions: the Eiffel tower, countless world-class restaurants, the Musée du Louvre, the Palace of Versailles, the Notre-Dame cathedral, the beaches of the Côte d'Azur, and of course, Disneyland Paris. Moreover, the lushly beautiful countryside is full of storybook villages, mountains, vineyards, and the occasional castle. One can even view prehistoric cave paintings in Lascaux. Paris, France's capital, is the most visited city in Europe, receiving 38 million tourists in 2019.</p>
             </div>
           </div>
           <div class="card mb-3" onclick="spain()">
             <img class="card-img-top" src="https://wallpaperaccess.com/full/2527006.jpg" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">2-Spain</h2>
-              <p class="card-text">Spain is another tourist destination overflowing with interesting attractions. Antoni Gaudi's Sagrada Familia cathedral and other works in Barcelona, the Guggenheim museum, the Alhambra and Generalife Gardens, Europe's largest aquarium (the lily-shaped L'Oceanogràfic), the beaches of Gran Canaria, and La Rambla in Barcelona. Spain is also home to El Teide, an ancient—but not entirely dormant—volcano, which visitors can hike around at the Parque Nacional del Teide on the Spanish island Tenerife</p>
+              <h2 class="card-title text-bold">2-Spain</h2>
+              <p class="card-text text-bold">Spain is another tourist destination overflowing with interesting attractions. Antoni Gaudi's Sagrada Familia cathedral and other works in Barcelona, the Guggenheim museum, the Alhambra and Generalife Gardens, Europe's largest aquarium (the lily-shaped L'Oceanogràfic), the beaches of Gran Canaria, and La Rambla in Barcelona. Spain is also home to El Teide, an ancient—but not entirely dormant—volcano, which visitors can hike around at the Parque Nacional del Teide on the Spanish island Tenerife</p>
             </div>
           </div>
           <div class="card mb-3" onclick="unitedStates()">
             <img class="card-img-top" src="https://wallpapercave.com/wp/wp4472281.png" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">3-United States</h2>
-              <p class="card-text">United States is a large industry that serves millions of international and domestic tourists yearly. Foreigners visit the U.S. to see natural wonders, cities, historic landmarks, and entertainment venues. Americans seek similar attractions, as well as recreation and vacation areas.</p>
+              <h2 class="card-title text-bold">3-United States</h2>
+              <p class="card-text text-bold">United States is a large industry that serves millions of international and domestic tourists yearly. Foreigners visit the U.S. to see natural wonders, cities, historic landmarks, and entertainment venues. Americans seek similar attractions, as well as recreation and vacation areas.</p>
             </div>
           </div>
           <div class="card mb-3" onclick="china()">
             <img class="card-img-top" src="https://bonpic.com/wallpapers/original/4508.jpg" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">4-China</h2>
-              <p class="card-text">China is a growing industry that is becoming a significant part of the Chinese economy. The rate of tourism has greatly expanded over the last few decades since the beginning of reform and opening-up. The emergence of a newly rich middle class and an easing of restrictions on movement by the Chinese authorities are both fueling this travel boom. China has become one of world's largest outbound tourist markets. According to Euromonitor International, economic growth and higher incomes in nearby Asian countries will help China to become the world’s number one tourist destination by 2030.</p>
+              <h2 class="card-title text-bold">4-China</h2>
+              <p class="card-text text-bold">China is a growing industry that is becoming a significant part of the Chinese economy. The rate of tourism has greatly expanded over the last few decades since the beginning of reform and opening-up. The emergence of a newly rich middle class and an easing of restrictions on movement by the Chinese authorities are both fueling this travel boom. China has become one of world's largest outbound tourist markets. According to Euromonitor International, economic growth and higher incomes in nearby Asian countries will help China to become the world’s number one tourist destination by 2030.</p>
             </div>
           </div>
           <div class="card mb-3" onclick="italy()">
             <img class="card-img-top" src="https://wallpaperaccess.com/full/5994288.jpg" alt="Card image cap">
             <div class="card-body">
-              <h2 class="card-title">5-Italy</h2>
-              <p class="card-text">People have visited Italy for centuries, yet the first to visit the peninsula for tourist reasons were aristocrats during the Grand Tour, beginning in the 17th century, and flourishing in the 18th and the 19th century. This was a period in which European aristocrats, many of whom were British and French, visited parts of Europe, with Italy as a key destination. For Italy, this was in order to study ancient architecture, local culture and to admire the natural beauties.</p>
+              <h2 class="card-title text-bold">5-Italy</h2>
+              <p class="card-text text-bold">People have visited Italy for centuries, yet the first to visit the peninsula for tourist reasons were aristocrats during the Grand Tour, beginning in the 17th century, and flourishing in the 18th and the 19th century. This was a period in which European aristocrats, many of whom were British and French, visited parts of Europe, with Italy as a key destination. For Italy, this was in order to study ancient architecture, local culture and to admire the natural beauties.</p>
             </div>
           </div>
         </div>
       </div>
       <div class="section section-image" style="background-image: url('./images/login-image.jpg')">
         <div class="container">
-          <h1 class="text-warning text-bold">Recomnded countries</h1>
+          <h1 class="text-danger text-bold" id="header-2">Recomnded countries</h1>
           <div class="row row-cols-1 row-cols-md-3 g-0">
             <div class="card bg-danger text-white">
               <img src="./images/japan.jpg" class="card-img-top" alt="...">
